@@ -86,7 +86,7 @@ TESTS	= sizes loadfree \
 	  mutex4 mutex6 mutex6n mutex6e mutex6r \
 	  mutex6s mutex6es mutex6rs \
 	  mutex7 mutex7n mutex7e mutex7r mutex8 mutex8n mutex8e mutex8r \
-	  count1 once1 once2 once3 tsd1 self2 \
+	  count1 once1 once2 once3 once4 tsd1 self2 \
 	  cancel1 cancel2 \
 	  semaphore4 semaphore4t \
 	  delay1 delay2 eyal1 \
@@ -252,6 +252,7 @@ mutex8r.pass: mutex7r.pass
 once1.pass: create1.pass
 once2.pass: once1.pass
 once3.pass: once2.pass
+once4.pass: once3.pass
 priority1.pass: join1.pass
 priority2.pass: priority1.pass barrier3.pass
 reuse1.pass: create2.pass
